--- a/public/chat.html
+++ b/public/chat.html
@@ -16,7 +16,10 @@
     <div class="chat-container">
       <header class="chat-header">
         <h1><i class="fas fa-smile"></i> ChatCord</h1>
-        <a href="index.html" class="btn">Leave Room</a>
+        <div class="button-block">
+          <a class="btn" id="clear-chat-btn">Clear Chat</a>
+          <a href="index.html" class="btn">Leave Room</a>
+        </div>
       </header>
       <main class="chat-main">
         <div class="chat-sidebar">
